[package]
name = "vest"
description = "vesting test"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
schemars.workspace = true
serde.workspace = true
cw-storage-plus.workspace = true

cw-utils = "1.0.1"
cw2 = "1.0.1"
serde_json = "1.0.91"
serde-cw-value = "0.7.0"
thiserror = "1.0.38"
prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
prost-types = {version = "0.11.1", default-features = false}
cosmos-sdk-proto = { version = "0.16.0", default-features = false }
anybuf = "0.1.0"
